--- a/SpMVC_16_EMS/src/main/webapp/WEB-INF/spring/naver.email.secret.properties
+++ b/SpMVC_16_EMS/src/main/webapp/WEB-INF/spring/naver.email.secret.properties
@@ -1,2 +1,4 @@
-naver.username=ENC(LpM5aMsEXkBmVY28CvyTSA==)
-naver.password=ENC(tytFV8RxQnDrVG2ahfrJyH13saN8sZ42)
+naver.username=ENC(BVloV+qtVaifjO642a4rnw==)
+naver.password=ENC(lhq1OuQ5qWy8wYWRlts4fcFMOeSv3rsT)
+mysql.user=ENC(miVFCMYpgXKSRbhEzJN/bA==)
+mysql.password=ENC(l//DCzZ/afH2P7GNvys2Qg==)
