--- a/SpMVC_16_EMSV2/pom.xml
+++ b/SpMVC_16_EMSV2/pom.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/maven-v4_0_0.xsd">
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/maven-v4_0_0.xsd">	
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.biz</groupId>
-	<artifactId>ems</artifactId>
+	<artifactId>ems_qussoa</artifactId>
+	
 	<name>ems</name>
+	
 	<packaging>war</packaging>
-	<version>1.0.0-BUILD-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<properties>
 		<java-version>1.8</java-version>
 		<org.springframework-version>5.2.2.RELEASE</org.springframework-version>
@@ -217,18 +219,24 @@
 		</dependency>
 	</dependencies>
 	<build>
+		
+<!-- 		<finalName>ems_qussoa-1.0</finalName> -->
+	<finalName>${project.artifactId}-${project.version}</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.tomcat.maven</groupId>
 				<artifactId>tomcat7-maven-plugin</artifactId>
 				<version>2.2</version>
 				<configuration>
+				<finalName>ems_qussoa-1.0</finalName>
 					<url>https://callor.com:12600/manager/text</url>
 					<username>admin</username>
 					<password>admin</password>
 					<path>/ems_qussoa</path>
 					<port>12600</port>
 					<update>true</update>
+					<uriEncoding>UTF-8</uriEncoding>
+					<charset>UTF-8</charset>
 				</configuration>
 			</plugin>
 
@@ -249,7 +257,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.5.1</version>
+				<version>3.8.1</version>
 				<configuration>
 					<source>${java-version}</source>
 					<target>${java-version}</target>
