--- a/SpMVC_19_MyShop/src/main/webapp/WEB-INF/web.xml
+++ b/SpMVC_19_MyShop/src/main/webapp/WEB-INF/web.xml
@@ -30,7 +30,10 @@
 		and Filters -->
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>/WEB-INF/spring/*-context.xml</param-value>
+		<param-value>
+		/WEB-INF/spring/root/*-context.xml
+		/WEB-INF/spring/*-context.xml		
+		</param-value>
 	</context-param>
 
 	<filter>
